@@ -859,6 +859,9 @@ order
 More items may be added at the end by some implementations.  Note that
 on the Mac OS, the time values are floating point values, like all
 time values on the Mac OS.
+\versionchanged
+[On other systems, the values are floats if the system reports
+ fractions of a second]{2.3}
 The standard module \refmodule{stat}\refstmodindex{stat} defines
 functions and constants that are useful for extracting information
 from a \ctype{stat} structure.
